crates/cli/tests/snapshots/cli_comprehensive_e2e_tests__error_snapshots__error_missing_telemetry_subcommand.snap
---
source: crates/cli/tests/cli_comprehensive_e2e_tests.rs
expression: stderr
---
Telemetry probe and capture commands

Usage: wheelctl telemetry [OPTIONS] <COMMAND>

Commands:
  probe            Probe telemetry transport for a game
  capture          Capture raw UDP telemetry packets to a binary file
  record           Record normalized telemetry snapshots to JSONL with safety provenance
  virtual-ffb-log  Replay normalized telemetry into a virtual FFB output log with no hardware writes
  help             Print this message or the help of the given subcommand(s)

Options:
      --json                 Output in JSON format for machine parsing
  -v, --verbose...           Verbose logging
      --no-mock              Fail if wheeld is unreachable instead of showing simulated data [env: WHEELCTL_NO_MOCK=1]
      --endpoint <ENDPOINT>  Service endpoint (for testing) [env: WHEELCTL_ENDPOINT=]
  -h, --help                 Print help
